feat: adopt Keycloak IAM for 1.0.1
