# backend/src/api/dto/update-email.dto.ts
@@ -1,6 +1,0 @@
-import { ApiProperty } from '@nestjs/swagger';
-
-export class UpdateEmailRequestDto {
-  @ApiProperty({ description: 'The new email address' })
-  email: string;
-}
